--- a/kadai_022/style.css
+++ b/kadai_022/style.css
@@ -33,16 +33,13 @@ main{
 .contents{
   border: solid 3px rgb(236,122,122);
   flex-basis: 25%;
-  padding-top: 10px;
-  padding-left: 15px;
-  margin-top: 20px;
-  margin-left: 20px;
+  padding: 10px 15px;
+  margin: 20px 0;
   text-align: center;
-  display: inline-block;
-  
   }
-  img{
-    margin-top: 10px auto;
+
+  .contents img{
+    margin: 10px 0;
     width: 70%;
    }
  
@@ -54,7 +51,7 @@ h2::before{
   content: "●";
   color: rgb(239,111,139);
 }
-div p:nth-of-type(2)::first-letter {
+.contents p:nth-of-type(2)::first-letter {
   font-weight: bold;
   color: rgb(97, 206, 249);
 }
