--- a/socialtech/style.css
+++ b/socialtech/style.css
@@ -9,6 +9,10 @@ p {
 /*================
  PC用のスタイル 
 =================*/
+@media screen and(min-width: 768px) {
+  
+
+
  /* 横幅設定 */
 body {
     max-width: 1080px;
@@ -62,10 +66,21 @@ header {
   #main-message > h1{
     font-size: 60px;
     font-weight: bold;
+    margin: 100px 0 0 50px;
   }
   #main-message > p{
     font-size: 28px;
+    margin-left: 50px;
   }
+  #main-visual > img{
+    max-width: 620px;
+    border-radius: 476px 0 0 0;
+    position: absolute;
+    top: 0;
+    right:0;
+    z-index: index 10;
+  }
+
 
 
   h2{
@@ -74,4 +89,372 @@ header {
   h2::after{
     content: url("images/line.png");
     margin-left: 10px;
+  }
+  h3{
+    font-size: 27px;
+  }
+  /*ミッション*/
+  #mission{
+    margin: 80px auto;
+    width: 100%;
+  }
+  #mission-flex{
+    width: 100%;
+    display: flex;
+  }
+  #mission-flex > div {
+    width: 50%;
+    margin: 20px;
+  }
+  #mission-photo{
+    width: 100%;
+  }
+  #s2dgs{
+    margin-top: 50px;
+    width: 100%;
+  }
+/* プロダクト */
+ #product{
+  background-color: #fafafa;
+  margin: 80px 0;
+  padding: 10px 40px 0 40px;
+ }
+
+ /* 外枠 */
+ #product > div{
+  margin-top: 40px;
+  display: flex;
+ }
+ /* 左のカラム */
+#product-left{
+  width: 50%;
+  margin-right: 20px;
+}
+#product-right{
+  width: 50%;
+  margin-left: 20px;
+margin-top: 80px;
+}
+/* 画像＋説明の枠 */
+#product-left > div{
+  position: relative;
+  height: 480px;
+  margin-right: 20px;
+}
+#product-right > div{
+  position: relative;
+  height: 480px;
+  margin-left: 20px;
+}
+
+/* 画像 */
+.product-photo{
+  width: 100%;
+}
+/* 説明文の枠 */
+.product-explain{
+  background: #ffffff;
+  position: absolute;
+  left: 0;
+  top: 280px;
+  margin: 0 40px 0 40px;
+  padding: 20px;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.05);
+}
+/* 説明文の英語 */
+.product-explain > span{
+  color: #2710d5;
+  font-weight: bold;
+  font-size: 16px;
+  margin: 0;
+}
+/* 説明文の見出し */
+.product-explain > h3{
+  font-size: 20px;
+  margin: 5px 0;
+}
+
+/* 説明文 */
+.product-explain > h3 {
+  font-size: 14px;
+  margin: 0;
+}
+/* 「もっと見る」ボタン */
+#product-more{
+  margin: 0 auto -42px auto;
+}
+/* ABOUT US*/
+#aboutus{
+  margin: 80px auto;
+}
+/* 3つの組織文化と画像を入れる枠 */
+#aboutus > div{
+  display: flex;
+}
+/* 画像 */
+.culture-img{
+  width: 100%;
+  align-self: flex-start;
+}
+.culture-img2{
+  margin-top: 50px;
+  width: 100%;
+}
+/* 3つの組織文化の表 */
+.culture-table{
+  margin-right: 50px;
+}
+/* 番号 */
+.culture-num{
+  font-size: 80px;
+  color: #2710d5;
+  margin-right: 20px;
+}
+/* 英語の見出し */
+.culture-en{
+  color: #2710d5;
+  font-weight: bold;
+  font-size: 24px;
+  display: block;
+}
+/* 日本語の見出し */
+.culture-jp{
+  font-size: 28px;
+  font-weight: bold;
+}
+/* 説明文 */
+.culture-description{
+  margin: 0;
+}
+/* vision */
+#vision{
+  margin: 80px auto;
+}
+#vision > div{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.vision-box{
+  width: 300px;
+  height: 300px;
+  margin-bottom: 30px;
+  position: relative;
+}
+.vision-box > img{
+  width: 100%;
+  height: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 30;
+}
+.vision-box > span{
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 31;
+  margin-right: 20px; 
+} 
+.vision-box > span >h4{
+  color: #2710d5;
+  font-size: 19px;
+  margin: 80px 0 0 0;
+}
+.vision-box > span >h4::first-letter{
+  font-size: 40px;
+}
+.vision-box > span > h5{
+  font-size: 20px;
+  margin: 0;
+}
+.vision-box > span > p{
+  margin: 10px 0 0 0;
+}
+/*会社概要*/
+#company{
+  margin: 80px auto;
+}
+#company-table{
+  width: 100%;
+}
+.tableheader{
+  text-align: left;
+  padding: 20px;
+  border-bottom-color:#2710d5;
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  width: 100px;
+}
+.tableheader-first{
+  text-align: left;
+  padding: 20px;
+  border-bottom-color: #2710d5;
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  border-top-color: #2710d5;
+  border-top-width: 1px;
+  border-top-style: solid;
+  width: 100px;
+}
+.cell{
+  padding: 30px;
+  border-bottom-color: #ececec;
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+}
+.cell-first{
+  padding: 30px;
+  border-bottom-color: #ececec;
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  border-top-color: #ececec;
+  border-top-width: 1px;
+  border-top-style: solid;
+}
+
+#company > iframe{
+  width: 100%;
+  height: 368px;
+  margin-top: 40px;
+}
+/*コンタクト*/
+#contact{
+  margin: 80px auto;
+}
+#contact > form >div{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding-bottom: 30px;
+}
+.contact-heading{
+  width: 240px;
+  align-self: center;
+}
+.contact-label{
+  font-weight: bold;
+}
+.contact-span{
+  color: #ce2222;
+  margin: 20px;
+  font-weight: bold;
+}
+.contact-textbox{
+  border-top: 0;
+  border-left: 0;
+  border-right: 0;
+  border-bottom-width: 1px;
+  border-bottom-color: #707070;
+  border-bottom-style: solid;
+  background-color: #fafafa;
+  width: 400px;
+  height: 56px;
+}
+.contact-textarea{
+  border-top: 0;
+  border-left: 0;
+  border-right: 0;
+  border-bottom-width: 1px;
+  border-bottom-color: #707070;
+  border-bottom-style: solid;
+  background-color: #fafafa;
+  width: 400px;
+  height: 200px;
+}
+details{
+  width: 700px;
+}
+
+details > div{
+  background-color: #fafafa;
+  padding: 20px;
+}
+details > div >span{
+  font-weight: bold;
+}
+/*フッター*/
+footer{
+  background-color: #0d0d0d;
+  text-align: center;
+  padding: 80px 80px 30px 80px;
+}
+#footer-logo{
+  margin-bottom: 30px;
+}
+#footer-link{
+  margin-bottom: 50px;
+}
+#footer-link > a{
+  text-decoration: none;
+  margin: 10px;
+}
+#footer-link > a:link{
+  color: #ffffff;
+}
+#footer-link > a:visited{
+  color: #ffffff;
+}
+#footer-link > a:hover{
+  color: #ffffff;
+  text-decoration: underline;
+}
+#footer-link > a:active{
+  color: #ffffff;
+}
+#sns-footer{
+  text-align: left;
+  width: 100%;
+}
+#sns-footer > a{
+  margin-right: 30px;
+}
+#copyright{
+  color: #ffffff;
+  float: right;
+}
+}
+  /*====================
+  スマートフォン用のスタイル
+  =====================*/
+  @media screen and(max-width:767px){ 
+ 
+  body{
+    min-width: 375px;
+    margin: 0;
+    background-color: #0d0d0d;
+  }
+
+  /*PC用ナビゲーション非表示*/
+  #nav-pc{
+    display: none;
+  }
+  /*ハンバーガーメニュー*/
+  #menu-sp{
+    float: right;
+    padding: 0;
+  }
+  /*スマホ用ナビゲーションの表示切替*/
+   /* 初期状態、レイアウトと非表示設定 */
+   #nav-sp{
+    background-color: #2710d5;
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    display: none;
+    z-index: 100;
+   }
+    /* ×ボタン */
+    #close{
+      position: absolute;
+      top: 20px;
+      right: 20px;
+    }
+    /* ナビゲーションメニュー用ロゴ */
+    #logo-sp{
+      margin: 80px0 30px 20px;
+    }
   }
