--- a/socialtech/style.css
+++ b/socialtech/style.css
@@ -9,7 +9,7 @@ p {
 /*================
  PC用のスタイル 
 =================*/
-@media screen and(min-width: 768px) {
+@media screen and (min-width: 768px) {
   
 
 
@@ -46,12 +46,17 @@ header {
 #nav-pc > a:active {
   color: #0d0d0d;
 }
-  /* メインビジュアル*/
-  #main-visual {
+#nav-sp,
+#menu-sp{
+  display: none;
+}
+
+/* メインビジュアル*/
+#main-visual {
     position: relative;
     height: 400px;
-  }
-  #main-message{
+}
+#main-message{
     position: absolute;
     top: 0;
     left: 0;
@@ -62,57 +67,57 @@ header {
     height: 100%;
     max-width: 620px;
     z-index: 11;
-  }
-  #main-message > h1{
+ }
+#main-message > h1{
     font-size: 60px;
     font-weight: bold;
     margin: 100px 0 0 50px;
-  }
-  #main-message > p{
+ }
+ #main-message > p{
     font-size: 28px;
     margin-left: 50px;
-  }
-  #main-visual > img{
+ }
+ #main-visual > img{
     max-width: 620px;
     border-radius: 476px 0 0 0;
     position: absolute;
     top: 0;
     right:0;
     z-index: index 10;
-  }
+ }
 
 
 
-  h2{
+h2{
     margin: 40px 0 0 0;
-  }
-  h2::after{
+}
+ h2::after{
     content: url("images/line.png");
     margin-left: 10px;
-  }
-  h3{
+}
+h3{
     font-size: 27px;
-  }
-  /*ミッション*/
-  #mission{
+ }
+ /*ミッション*/
+ #mission{
     margin: 80px auto;
     width: 100%;
-  }
-  #mission-flex{
+}
+#mission-flex{
     width: 100%;
     display: flex;
-  }
-  #mission-flex > div {
+ }
+ #mission-flex > div {
     width: 50%;
     margin: 20px;
-  }
-  #mission-photo{
+ }
+ #mission-photo{
     width: 100%;
-  }
-  #s2dgs{
+ }
+ #s2dgs{
     margin-top: 50px;
     width: 100%;
-  }
+ }
 /* プロダクト */
  #product{
   background-color: #fafafa;
@@ -121,7 +126,7 @@ header {
  }
 
  /* 外枠 */
- #product > div{
+#product > div{
   margin-top: 40px;
   display: flex;
  }
@@ -415,15 +420,14 @@ footer{
   float: right;
 }
 }
+
   /*====================
   スマートフォン用のスタイル
   =====================*/
-  @media screen and(max-width:767px){ 
- 
+@media screen and (max-width: 767px){
   body{
     min-width: 375px;
     margin: 0;
-    background-color: #0d0d0d;
   }
 
   /*PC用ナビゲーション非表示*/
@@ -453,8 +457,358 @@ footer{
       top: 20px;
       right: 20px;
     }
+
     /* ナビゲーションメニュー用ロゴ */
     #logo-sp{
-      margin: 80px0 30px 20px;
+      margin: 80px 0 30px 20px;
     }
+  
+  #nav-sp > a{
+    display: block;
   }
+  #nav-sp > a:link{
+    color: #ffffff;
+  }
+  #nav-sp > a:visited {
+    color: #ffffff;
+  }
+  #nav-sp > a:hover {
+    color: #ffffff;
+    text-decoration: underline;
+  }
+  #nav-sp > a:active {
+    color: #ffffff;
+  }
+  #nav-sp > .menu {
+    text-decoration: none;
+    display: block;
+    margin: 0 20px 0 20px;
+    height: 44px;
+    font-size: 16px;
+    background-image: url("images/arrow.png");
+    background-repeat: no-repeat;
+    background-position: right top;
+  }
+  #sns {
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
+  }
+  #sns > a {
+    margin-right: 30px;
+  }
+ /* メインビジュアル */
+  #main-visual {
+    position: relative;
+    height: 470px;
+    width: 100%;
+   overflow: hidden;
+  }
+
+  #main-visual > div {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #2710d5;
+    color: white;
+    border-radius: 0 0 476px 0;
+    text-align: center;
+    height: 280px;
+    width: 100%;
+    z-index: 11;
+  }
+
+  #main-visual > div > h1{
+    font-size: 28px;
+    margin: 90px 0 0 0;
+  }
+
+  #main-visual > div > p{
+    margin: 0;
+  }
+  #main-visual > img{
+    width: 100%;
+    border-radius: 476px 0 0 0;
+    z-index: 10;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+  }
+  /* 見出し */
+  h2::after {
+    content: url("images/line.png");
+    margin-left: 10px;
+  }
+
+  h3 {
+    font-size: 24px;
+    margin: 10px 0 0 0;
+  }
+  /* ミッション */
+  #mission{
+    margin: 20px;
+  }
+  #mission-photo{
+    width: 100%;
+  }
+#s2dgs{
+  width: 100%;
+}
+   /* プロダクト */
+#product{
+  background-color: #fafafa;
+  padding-top: 10px;
+}
+#product h2{
+  margin-left: 20px;
+}
+  /* 外枠 */
+   /* 左右のカラム スマホでは縦並び */
+#product-left,
+#product-right{
+  margin-right: 20px;
+  margin-left: 20px;
+}
+#product-left > div,
+#product-right > div{
+  position: relative;
+  height: 540px;
+}
+.product-explain{
+  background-color: #ffffff;
+  position: absolute;
+  left: 0;
+  bottom: 50px;
+  padding: 20px;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.05);
+}
+.product-explain > span{
+  color: #2710d5;
+  font-weight: bold;
+  font-size: 16px;
+  margin: 0px;
+}
+.product-explain > h3{
+  margin: 10px 0 10px 0;
+}
+.product-photo{
+  width: 100%;
+}
+#product-more > img{
+  margin: 0 0 -42px 20px;
+}
+
+#aboutus{
+  margin: 80px 20px 80px 20px;
+}
+#aboutus > div{
+  display: flex;
+  flex-direction: column;
+}
+.culture-table{
+  width: 100%;
+  padding-right: 20px;
+  order: 2;
+}
+.culture-img{
+  width: 100%;
+  order: 1;
+}
+.culture-img2{
+  width: 100%;
+}
+.culture-num{
+  font-size: 80px;
+  color: #2710d5;
+}
+.culture-en{
+  color: #2710d5;
+  font-weight: bold;
+  font-size: 24px;
+  display: block;
+}
+.culture-jp{
+  display: block;
+}
+.culture-description{
+  margin: 0;
+}
+#vision{
+  margin: 80px 20px 80px 20px;
+}
+.vision-box{
+  width: 300px;
+  height: 300px;
+  margin-bottom: 30px;
+  position: relative;
+}
+.vision-box > img{
+  width: 100%;
+  height: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 30;
+}
+.vision-box > span{
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 31;
+  margin-right: 60px;
+}
+.vision-box > span > h4{
+  color: #2710d5;
+  font-size: 19px;
+  margin-top: 60px;
+}
+.vision-box > span > h5{
+  font-size: 20px;
+  margin: 0;
+}
+.vision-box > span > p{
+  margin-top: 10px;
+}
+#company{
+  margin: 0 20px 0 20px;
+}
+#company > h3{
+  margin-bottom: 20px;
+}
+#company > table{
+  width: 100%;
+}
+.tableheader-first{
+  text-align: left;
+  padding: 20px;
+  border-bottom-color: #2710d5;
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  border-top-color: #2710d5;
+  border-top-width: 1px;
+  border-top-style: solid;
+  width: 50px;
+}
+.tableheader{
+  text-align: left;
+  padding: 20px;
+  border-bottom-color: #2710d5;
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  width: 50px;
+}
+.cell{
+  padding: 20px;
+  border-bottom-color: #ececec;
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+}
+.cell-first{
+  padding: 20px;
+  border-bottom-color: #ececec;
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  border-top-color: #ececec;
+  border-top-width: 1px;
+  border-top-style: solid;
+}
+#company > iframe{
+  width: 100%;
+  height: 240px;
+  margin-top: 40px;
+}
+#contact{
+  margin: 80px 20px 80px 20px;
+  }
+#contact > h3{
+  margin-bottom: 20px;
+}
+#contact > form > div{
+  margin-bottom: 20px;
+}
+.contact-heading{
+  margin-bottom: 20px;
+}
+.contact-label{
+  font-weight: bold;
+}
+.contact-span{
+  color: #ce2222;
+  margin: 20px;
+  font-weight: bold;
+}
+.contact-textbox{
+  height: 56px;
+  border-top: 0;
+  border-left: 0;
+  border-right: 0;
+  background-color: #fafafa;
+  border-bottom-color: #707070;
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  min-width: 300px;
+  width: 100%;
+}
+.contact-textarea{
+  height: 150px;
+  border-top: 0;
+  border-left: 0;
+  border-right: 0;
+  background-color: #fafafa;
+  width: 100%;
+}
+.radiobutton{
+  margin-bottom: 20px;
+}
+.radiobutton + label::after{
+  content: "\A";
+  white-space: pre;
+}
+footer{
+  background-color: #0d0d0d;
+  padding: 30px 20px 50px 20px;
+}
+#footer-logo{
+  margin-bottom: 30px;
+}
+#footer-link{
+  margin-bottom: 50px;
+}
+#footer-link > a{
+  text-decoration: none;
+  margin-right: 20px;
+  margin-bottom: 30px;
+  display: block;
+  background-image: url(images/arrow.png);
+  background-repeat: no-repeat;
+  background-position: right top;
+}
+#footer-link > a:lilnk{
+  color: #ffffff;
+}
+#footer-link > a:visited{
+  color: #ffffff;
+} 
+#footer-link > a:hove{
+  color: #ffffff;
+  text-decoration: underline;
+}
+#footer-link > a:active{
+  color: #ffffff;
+}
+
+
+#sns-footer > a{
+  margin-right: 30px;
+}
+#copyright{
+  font-size: 12px;
+  display: block;
+  margin-top: 30px;
+  color: #ffffff;
+}
+}
+
+
+
+
